--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,17 +1,25 @@
 name: spacex api project
-on: 
- push: 
-  branches: [ master ]
- pull_request:
-  branches: [ master ]
-jobs: 
-  build: 
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
+jobs:
+  build:
     runs-on: ubuntu-latest
-      steps: 
-        - uses: actions/checkout @v2
-        - name: Use Node.js version 18
-        - uses: actions/setup-node@v2
-          with: 
-            node-version: "18"
-          - run: npm install
-          - run: npm run build --prefix client 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Use Node.js version 18
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build client
+        run: npm run build --prefix client
