--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,18 +8,24 @@ on:
 
 jobs:
   build:
+    env: 
+      CI: true
+    strategy:
+      matrix: 
+        node-version: [14.x, 16.x]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Use Node.js version 18
+      - name: Use Node.js version ${{matrix.node-version}}
         uses: actions/setup-node@v2
         with:
-          node-version: "18"
+          node-version: ${{matrix.node-version}}
 
       - name: Install dependencies
         run: npm install
 
       - name: Build client
         run: npm run build --prefix client
+        run: npm test
