--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -28,4 +28,6 @@ jobs:
 
       - name: Build client
         run: npm run build --prefix client
+       
+        - name: Run tests
         run: npm test
