--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,12 +8,14 @@ on:
 
 jobs:
   build:
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost/nasacluster
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-    env:
-      CI: true
+        mongodb-version: ['4.4']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,6 +24,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Use mongodb from github actions
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Install dependencies
         run: npm install
